--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,67 @@ span{
     font-size: 12px;
     font-weight: 700;
     color: #6e7ea9;
+    list-style-type: none;
 }
 .nav a{
     color: #fff;
     background-color: #1085e4;
     font-weight: 400;
+}
+.btn-free{
+    padding: 21px 55px;
+    background-color: #1085e4;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 400;
+    border: 1px solid #1085e4;
+    border-radius: 30px;
+    letter-spacing: 1.7px;
+}
+.btn-free:hover{
+    background: #fff;
+    color: #1085e4;
+}
+.btn-primary{
+    background-color: #1085e4;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
+    padding: 21px 40px;
+    border-radius: 30px;
+    letter-spacing: 2.4px;
+    border: 1px solid #1085e4;
+}
+.btn-primary:hover{
+    background: #fff;
+    color: #1085e4;
+}
+.btn-secondary{
+    background-color: #cbdbe8;
+    color: #7e8bae;
+    font-size: 12px;
+    padding: 21px 39px;
+    border-radius: 30px;
+    letter-spacing: 2.4px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-left: 17px;
+    border: 1px solid #cbdbe8;
+}
+.btn-secondary:hover{
+    background: #fff;
+}
+.btn-info{
+    background: transparent;
+    color: #8085b1;
+    border: 1px solid #dce1e5;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 21px 40px;
+    border-radius: 30px;
+    letter-spacing: 2.4px;
 }
 .page-grid h2{
     font-size: 40px;
