--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,27 @@ ul{
     max-width: 1110px;
     margin: 0 auto;
 }
+.logo{
+    background-image: url(../img/header-logo.png);
+    display: block;
+    flex-basis: 181px;
+    height: 49px;
+}
+.box-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 251px;
+}
+.screen-header{
+    background-image: url(../img/header-screen.png);
+    background-repeat: no-repeat;
+    height: 740px;
+    width: 895px;
+    position: absolute;
+    right: -206px;
+    top: 190px;
+}
 .nav{
     text-transform: uppercase;
     font-size: 12px;
@@ -118,6 +139,31 @@ ul{
     border-radius: 30px;
     letter-spacing: 2.4px;
 }
+.company{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.co-one{
+    background-image: url(../img/logo2.png);
+    flex-basis: 198px;
+    height: 58px;
+}
+.co-two{
+    background-image: url(../img/logo3.png);
+    flex-basis: 200px;
+    height: 69px;
+}
+.co-three{
+    background-image: url(../img/logo4.png);
+    flex-basis: 201px;
+    height: 47px;
+}
+.co-four{
+    background-image: url(../img/logo5.png);
+    flex-basis: 200px;
+    height: 69px;
+}
 .page-grid h2{
     font-size: 40px;
 }
@@ -143,12 +189,61 @@ ul{
     color: #1085e4;
     font-size: 14px;
 }
-.page-subscribe{
+.box-sub{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+}
+.content-sub{
+    padding: 75px 0 0px 0;
+    flex-basis: 540px;
+    position: relative;
+}
+.content-sub h2{
+    color: #ffffff;
+    letter-spacing: -1.4px;
+    margin-bottom: 29px;
+    font-size: 50px;
+}
+.content-sub p{
+    max-width: 410px;
+    line-height: 28px;
     color: #dfe8ff;
     font-size: 18px;
+    padding-bottom: 18px;
 }
-.page-subscribe h2{
-    color: #ffffff;
+.title-sub{
+    color: #dfe8ff;
+    letter-spacing: -1.4px;
+    margin-bottom: 33px;
+}
+.title-sub span{
+    letter-spacing: 2.8px;
+    padding-bottom: 20px;
+}
+.img-robot{
+    flex-basis: 398px;
+    padding-top: 23px;
+}
+.text-email{
+    background: transparent;
+    border: 2px solid #4265b7;
+    padding: 8px 38px;
+    border-radius: 35px;
+    width: 461px;
+    height: 51px;
+    font-size: 14px;
+}
+.text-email::placeholder{
+    color: #b1c3ee;
+}
+.btn-email{
+    right: 12px;
+    top: 340px;
+    position: absolute;
+    padding: 17px 46px;
+    font-size: 12px;
+    letter-spacing: 3.7px;
 }
 dt{
     font-size: 16px;
@@ -236,8 +331,8 @@ dd{
  }
 .price-item-pas{
     background-color: #f5faff;
-    width: 350px;
-    height: 624px;
+    flex-basis: 31%;
+
 }
 .price-item-pas h3{
     font-size: 70px;
@@ -248,9 +343,9 @@ dd{
     letter-spacing: -1.7px;
 }
 .price-item-pas span{
-display: inline;
-color:#000958;
-font-size: 20px;
+    display: inline;
+    color:#000958;
+    font-size: 20px;
 }
 u{
     text-transform: lowercase;
@@ -270,8 +365,8 @@ strong{
 }
 .box-active{
     background-color: #192b59;
-    width: 350px;   
-    height: 624px;
+    flex-basis: 31%;
+    padding: 0 0 100px 0;
 }
 .box-active h3{
     color: #fff;
@@ -294,7 +389,31 @@ strong{
     color: #fff;
 }
 /* PAGE */
-
+.page-header{
+    background-image: url(../img/header-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 54px 0 334px 0;
+    position: relative;
+}
+.page-co{
+    background-image: url(../img/bg1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 107px 0 99px 0;
+}
+.page-subscribe{
+    padding-bottom: 27px;
+    background: rgba(10,32,144,1);
+    background: -moz-linear-gradient(left, rgba(10,32,144,1) 0%, rgba(35,120,205,1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(10,32,144,1)), color-stop(100%, rgba(35,120,205,1)));
+    background: -webkit-linear-gradient(left, rgba(10,32,144,1) 0%, rgba(35,120,205,1) 100%);
+    background: -o-linear-gradient(left, rgba(10,32,144,1) 0%, rgba(35,120,205,1) 100%);
+    background: -ms-linear-gradient(left, rgba(10,32,144,1) 0%, rgba(35,120,205,1) 100%);
+    background: linear-gradient(to right, rgba(10,32,144,1) 0%, rgba(35,120,205,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0a2090', endColorstr='#2378cd', GradientType=1 );
+    
+}
 .page-fun{
     background-color: #edf6ff;
 }
