--- a/css/style.css
+++ b/css/style.css
@@ -167,12 +167,114 @@ ul{
 .page-grid h2{
     font-size: 40px;
 }
-.grid h3{
+.grid{
+    display: grid;
+    grid-template-columns: 380px 380px 350px;
+    grid-template-areas: "a b c"
+    "d b c"
+    "d f g"
+    "e f g"
+    "e h h";
+    max-width: 1110px;
+    margin: 0 auto;
+    padding: 86px 0 93px 0;
+} 
+.grid-title{
+    grid-area: a;
+    font-weight: 700;
+    letter-spacing: -1.2px;
+    max-width: 285px;
+    line-height: 50px;
+    margin-bottom: 14px;
+}
+.grid-title span{
+    letter-spacing: 2.9px;
+    padding-bottom: 18px;
+    line-height: 1.15;
+}
+.grid-item-1{
+    grid-area: b;
+}
+.grid-item-2{
+    grid-area: c;
+}
+.grid-item-3{
+    grid-area: d;
+}
+.grid-item-4{
+    grid-area: e;
+}
+.grid-item-5{
+    grid-area: f;
+}
+.grid-item-6{
+    grid-area: g;
+}
+.grid-text{
+    grid-area: h;
+    margin-left: 19px;
+    line-height: 27px;
+}
+.grid-icon{
+    background-repeat: no-repeat;
+    display: block;
+    margin: 85px auto 36px;
+}
+.grid-icon1{
+    background-image: url(../img/icon3.png);
+    width: 73px;
+    height: 79px;
+}
+.grid-icon2{
+    background-image: url(../img/icon2.png);
+    width: 89px;
+    height: 85px;
+
+}
+.grid-icon3{
+    background-image: url(../img/icon1.png);
+    width: 79px;
+    height: 82px;
+
+}
+.grid-icon4{
+    background-image: url(../img/icon4.png);
+    width: 102px;
+    height: 92px;
+
+}
+.grid-icon5{
+    background-image: url(../img/icon5.png);
+    width: 85px;
+    height: 90px;
+ 
+}
+.grid-icon6{
+    background-image: url(../img/icon6.png);
+    width: 100px;
+    height: 87px;
+ 
+}
+.grid-item{
+    text-align: center;
+    box-shadow: 0px 15px 16px #f4f4f4;
+    width: 354px;
+    height: 423px;
+    border-radius: 10px;
+}
+.grid-item h3{
     font-size: 20px;
     font-weight: 600;
     color: #192b59;
+    margin-bottom: 22px;
+    letter-spacing: -0.7px;
 }
-.grid a{
+.grid-item p{
+    max-width: 260px;
+    margin: 0 auto 20px;
+    line-height: 26px;
+}
+.grid-item a{
     color: #1085e4;
     font-size: 14px;
     font-weight: 600;
@@ -228,14 +330,22 @@ ul{
 .text-email{
     background: transparent;
     border: 2px solid #4265b7;
-    padding: 8px 38px;
+    padding: 31px 209px 34px 35px;
     border-radius: 35px;
-    width: 461px;
+    width: 100%;
     height: 51px;
     font-size: 14px;
+    box-sizing: border-box;
+    color: #fff;
 }
-.text-email::placeholder{
-    color: #b1c3ee;
+
+.text-email::-webkit-input-placeholder {color:#b1c3ee;}
+.text-email::-moz-placeholder          {color:#b1c3ee;}
+.text-email:-moz-placeholder           {color:#b1c3ee;}
+.text-email:-ms-input-placeholder      {color:#b1c3ee;}
+
+.text-email:focus{
+    outline: none;
 }
 .btn-email{
     right: 12px;
@@ -245,6 +355,7 @@ ul{
     font-size: 12px;
     letter-spacing: 3.7px;
 }
+
 dt{
     font-size: 16px;
     font-weight: 700;
